tests/miniJava/neg/003834_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { if new ( 0 ) { } else { } } }
